--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,18 @@ main {
   border-radius: 8px;
 }
 
+.info-content .username {
+  color: var(--white-1);
+  /* background: var(--onyx); */
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  margin: -3px 0 6px 5px;
+ width: max-content; 
+ 
+  /* padding: 3px 12px;
+  border-radius: 8px; */
+}
+
 .info_more-btn {
   position: absolute;
   top: -15px;
@@ -2321,8 +2333,16 @@ textarea.form-input::-webkit-resizer {
     white-space: nowrap;
     text-align: center;
   }
+ 
+
+  .info-content .username {
+margin-top: -5px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   .info-content .title {
+
     margin: auto;
   }
 
