--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -927,7 +927,7 @@ main {
   margin-bottom: 7px;
 }
 
-.timeline-list span {
+.timeline-list .timeline-date {
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
   line-height: 1.6;
@@ -961,6 +961,21 @@ main {
   line-height: 1.6;
 }
 
+.timeline-text-detail {
+  position: relative;
+  padding-left: 25px;
+  
+  
+}
+
+.timeline-text-detail::before {
+  
+  content: "-";
+  position: absolute;
+  left: 0;
+  padding-left: 5px;
+  
+}
 /**
  * skills 
  */
