--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,8 +360,9 @@ main {
 }
 
 .verified-icon img {
-  height: 24px;
-  width: 24px;
+  margin-top: 0.5px;
+  height: 23px;
+  width: 23px;
   vertical-align: middle;
   transition: transform 0.3s ease;
 }
